--- a/index.css
+++ b/index.css
@@ -8,10 +8,14 @@ iframe {
     display: block;
 }
 .button {
-
-    position: absolute;
-    bottom: 30px;
-    left: 20px;
-    z-index: 1;
-
+    background-color: #4CAF50  ;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
 }
